--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,16 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp01_1m]
-platform = espressif8266
+platform = espressif8266@2.5.2
 board = esp01_1m
+; change microcontroller
+board_build.mcu = esp8266
+
+; change MCU frequency
+; board_build.f_cpu = 80000000L
 framework = arduino
+
+; upload_protocol = esptool
+; build_flags = -D LED_BUILTIN=2
+board_build.flash_mode = dout
+; upload.speed=115200
